--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
+    "set-value": ">=2.0.1",
     "shelljs": "^0.3.0"
   },
   "config": {
