--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
+    "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1",
     "shelljs": "^0.3.0"
   },
