--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
+    "lodash": ">=4.17.13",
+    "lodash.merge": ">=4.6.2",
+    "lodash.mergewith": ">=4.6.2",
+    "lodash.template": ">=4.5.0",
     "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1",
     "shelljs": "^0.3.0"
