--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "lodash.template": ">=4.5.0",
     "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "ws": ">=3.3.1"
   },
   "config": {
     "ionic_generate_source_map": true
