--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1",
     "shelljs": "^0.3.0",
+    "tar": ">=2.2.2",
     "ws": ">=3.3.1"
   },
   "config": {
