--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lodash.merge": ">=4.6.2",
     "lodash.mergewith": ">=4.6.2",
     "lodash.template": ">=4.5.0",
+    "minimatch": ">=3.0.2",
     "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1",
     "shelljs": "^0.3.0",
